<resources>
    <string name="app_name">fotocon</string>

    <string name="email_label">E-mail</string>
    <string name="email_hint">your.email@example.com</string>
    <string name="password_hint">********</string>

    <string name="password_label">Password</string>
    <string name="sign_in_btn_text">Sign in</string>
    <string name="sign_in_title">Sign in</string>



    <string name="sign_up_btn_text">Sign up</string>
    <string name="r_password_label">Repeat password</string>
    <string name="back_to_sign_in_btn_text">Back to sign in</string>

    <string name="api_server">http://192.168.8.104/fotocon/public/api/</string>

</resources>